# emcs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
emcs_lib/: Cargo.toml
emcs_lib/src/: error.rs  lib.rs  mc_versions.rs  options.rs
old/src/: error_types.rs
src/: cli.rs  cli_args.rs  error_types.rs  main.rs  style.css  style.css.map
src/binary/: cli.rs
src/term/: mod.rs
src/ui/: mod.rs
styles/: index.scss
