[package]
name = "emcs"
version = "0.1.0"
edition = "2021"
authors = ["314ShadePi <erikkirkegaardstage@gmail.com>"]
description = "An Easy MineCraft Server installer. Not affiliated with Mojang."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c314-utils = "0.2.0"
clap = { version = "4.0.29", features = ["derive"] }
dioxus = { version = "0.2.4", features = ["desktop"] }
home = "0.5.4"
inquire = "0.5.2"
log = "0.4.17"
reqwest = "0.11.13"
simplelog = "0.12.0"
slint = "0.3.2"
tokio = "1.23.0"
