[workspace]
members = ["emcs_lib"]


[workspace.package]
version = "1.0.0"
authors = ["314ShadePi <erikkirkegaardstage@gmail.com>"]

[package]
name = "emcs"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "An Easy MineCraft Server installer. Not affiliated with Mojang."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c314-utils = "0.2.0"
emcs_lib = { path = "./emcs_lib" }
clap = { version = "4.0.29", features = ["derive"] }
dioxus = { version = "0.2.4", features = ["desktop"] }
home = "0.5.4"
inquire = "0.5.2"
log = "0.4.17"
simplelog = "0.12.0"
tokio = "1.23.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"

[build-dependencies]
sass-rs = "0.2.2"
c314-utils = "0.2.0"

[profile.release]
opt-level = "s"


