[package]
name = "emcs_lib"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
tokio = "1.23.0"
log = "0.4.17"
c314-utils = "0.2.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.38"
strum = { version = "0.24.1", features = ["derive"] }
